examples/test/testpolicy3573.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3573
  namespace: namespace169
spec:
  podSelector:
    matchLabels:
      key1: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value7
          key14: value49
          key9: value24
      podSelector:
        matchLabels:
          key40: value27
          key12: value33
